# LithicRivers

./: .gitignore  .replit  Dockerfile  Pipfile  QOL.md  README.md  TODO.md  coverage.lcov  dwarfasciigame.spec  lithicrivers.spec  main.py  main.sh  pyproject.toml  settings.py  test.sh  textUtil.py
.github/workflows/: .replit  pre-release-macos.yml  pre-release-macos10.yml  pre-release-macos11.yml  pre-release-osx.yml  pre-release-ubuntu.yml  pre-release-windows.yml  run-tests.yml
.run/: unittest.run.xml
dwarfasciigame/: __main__.py  fuckpythonclassestest.py  game.py  settings.py  ui.py
lithicrivers/: __main__.py  constants.py  game.py  model.py  settings.py  textutil.py  ui.py
lithicrivers/model/: modelpleasemoveme.py  vector.py
lithicrivers/test/: testBogus.py  testMath.py  testRender.py  testSerialize.py  testWorldgen.py
scripts/: generate_exe.cmd  generate_exe.sh  setup.cmd  setup.sh  start.cmd  start.sh  test-tui.sh  test.cmd  test.sh
